client/src/components/ProductDetails/products.css
body {
  --shadow-color: hsl(0deg 0% 0% / 26%);
}

button {
  cursor: pointer;
}

.inline {
  display: flex;
  position: relative;
  align-items: center;
  margin: 2px 2px;
  width: 60vw;
  height: 60vh;
}

.expanded {
  display: flex;
  position: relative;
  align-items: center;
  margin: 2px 2px;
  width: 90vw;
  height: 60vh;
}

.imageView {
  display: flex;
  position: relative;
}

.topRight {
  display: flex;
  position: absolute;
  right: 0px;
  top: 2px;
  color: #804BAC;
  z-index: 2;
}

.topRight:hover {
  transform: scale(1.1);
}

.noClick {
  cursor: default;
}

.imgContainer {
  z-index: '2';
  border: 1px solid black;
  background: none;
  box-shadow: 4px 4px 20px black;
  border-radius: 2%;
}

.mainDiv {
  display: flex;
}

.detailsBar {
  display: flex;
  flex-direction: column;
  margin-left: 10px;
  align-items: flex-start;
  justify-content: space-between;
}

.detailsDiv {
  width: 40vw;
  padding: 5px;
  display: grid;
}

.center {
  display: flex;
  align-items: center;
  justify-content: center;
}

.circleImage {
  object-fit: cover;
  display: flex;
  overflow: scroll;
  border: 4px solid #525252;
  border-radius: 50%;
  height: 60px;
  width: 60px;
  margin: 2px;
}

.circleImage:hover {
  opacity: 0.5;
  border: 4px solid #804BAC;
}

.selected {
  object-fit: cover;
  border: 4px solid #804BAC;
  display: flex;
  overflow: scroll;
  border-radius: 50%;
  height: 60px;
  width: 60px;
  margin: 2px;
}

.circle-btn {
  position: relative;
  display: inline-block;
  }

.circle-btn .fa-check {
  position: absolute;
  top: 3px;
  right: 3px;
  font-weight: normal;
  }

.buttonWrap {
  border: none;
  background: none;
}

.sale {
  color: #B81A30;
}

.originalPrice {
  text-decoration: line-through;
}

.price {
  font-size: 20px;
  font-weight: 400;
}

.sideGrid {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 5vh;
  margin-left: 50px;
  margin-right: 20px;
}

.sideImage {
  object-fit: cover;
  display: flex;
  overflow: scroll;
  border: 4px solid #525252;
  border-radius: 0.5rem;
  margin: 5px 0px;
  height: 5vh;
  width: 5vh;
}

.sideImage:hover {
  opacity: 0.5;
  border: 4px solid #804BAC;
}

.selectedSideImage {
  object-fit: cover;
  display: flex;
  overflow: scroll;
  border: 4px solid #804BAC;
  border-radius: 0.5rem;
  margin: 5px 0px;
  height: 5vh;
  width: 5vh;
}

.mainImage {
  margin: 0 15px;
  display: block;
  max-height: 55vh;
  max-width: 40vw;
  box-shadow: 2px 2px 10px black;
  border-radius: 2%;
}

.expandedImage {
  cursor: zoom-in;
  margin: 0 15px;
  max-height: 59vh;
  max-width: 70vw;
  box-shadow: 4px 4px 20px black;
  border-radius: 2%;
}

.large-image {
  width: calc( 100% - 5vh - 80px );
}

.detailsGrid {
  width: 40vw;
}

.flex {
  display: flex;
}

.containCircles {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  max-height: 20vh;
  overflow: auto;
}

.visible {
  z-index: 2;
  opacity: 1;
  margin: 0;
  position: relative;
  background-color: #fff;
  border-radius: 50%;
}

.chevron {
  cursor: pointer;
  margin: 3px;
}

.dropdowns {
  display: flex;
  flex-direction: column;
  margin: 10px;
  align-items: center;
  color: black;
  border-color: #804BAC;
}

.size-selector {
  margin-right: 10px;
  height: 30px;
  width: 150px;
}

.qty-selector {
  height: 30px;
  width: 80px;
}

.cart-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 2px solid;
  font-size: 15px;
  font-weight: 500;
  font-family: 'Poppins', sans-serif;
  border-radius: 5rem;
  margin-right: 10px;
  height: 30px;
  width: 150px;
}

.outfit-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 2px solid;
  font-size: 15px;
  font-weight: 500;
  font-family: 'Poppins', sans-serif;
  border-radius: 5rem;
  height: 30px;
  width: 80px;
}

.outfit-btn:hover,
.cart-btn:hover {
  opacity: 0.7;
  cursor: pointer;
}

.button-light {
  border-color: var(--main-color);
  background-color: var(--white-color);
}

.button-dark {
  border-color: var(--main-color);
  background-color: var(--main-color);
  color: white;
}

.socials {
  display: flex;
  margin: 10px 0px;
  align-items: center;
  height: 30px;
  float: right;
}

.social-icon {
  height: 30px;
  width: 30px;
  margin: 10px;
  filter: drop-shadow(0px 2px 10px var(--shadow-color))
}

.pinterest {
  fill: #E60023;
}

.facebook {
  fill: #4267B2;
}

.twitter {
  fill: #1DA1F2;
}

.pinterest:hover,
.facebook:hover,
.twitter:hover {
  height: 30px;
  width: 30px;
}

.description {
  margin: 40px 5px;
}

.description-card {
  flex-direction: column;
  padding: 15px;
  width: 60vw;
  border-right: 4px solid #804BAC;
}

.description-card h3 {
  color: #804BAC;
}

.features-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 5px;
  width: 40vw;
}

.feature-item {
  margin: 2px;
}

.reviews-btn {
  text-decoration: underline;
  display: flex;
  justify-content: center;
}

.reviews-btn:hover {
  color: #804BAC;
}

.category {
  font-size: 20px;
  font-weight: 200;
  border-top: -60px;
}

.rating-link {
  border-bottom: 0px;
}

.product-name {
  color:#804BAC;
  font-size: 30px;
  font-weight: 600;
}

.style-name {
  color:#804BAC;
  font-size: 20px;
  font-weight: 400;
}

